--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
         - if [ -z "$TRAVIS_PULL_REQUEST_SHA" ]; then export PT_COMMIT=$TRAVIS_COMMIT; else export PT_COMMIT=$TRAVIS_PULL_REQUEST_SHA; fi
         # - echo $PT_COMMIT
         # - echo $PT_BRANCH
-        - npm run build --base=/nuxt-custom-elements/
+        - npm run build --base=/nuxt-font-loader-strategy/
     - stage: deploy
       if: branch = master
       install:
@@ -34,7 +34,7 @@ jobs:
       script:
         - npx semantic-release --provider=github
         - mkdir gh-pages gh-pages/reports
-        - cp -R dist/nuxt-custom-elements/* gh-pages/
+        - cp -R dist/* gh-pages/
         - cp -R reports/* gh-pages/reports/
         - touch gh-pages/.nojekyll
       deploy:
