--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
         - if [ -z "$TRAVIS_PULL_REQUEST_SHA" ]; then export PT_COMMIT=$TRAVIS_COMMIT; else export PT_COMMIT=$TRAVIS_PULL_REQUEST_SHA; fi
         # - echo $PT_COMMIT
         # - echo $PT_BRANCH
-        - npm run build --base=/nuxt-font-loader-strategy/
+        - npm run generate --base=/nuxt-font-loader-strategy/
     - stage: deploy
       if: branch = master
       install:
