--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Build
         run: |
           npm run generate
-          cp -R reports/* dist/reports/
+          cp -R reports/** dist/reports/
           touch dist/.nojekyll
         env:
           WEBSITE_HOST: 'https://grabarzundpartner.github.io/nuxt-font-loader-strategy'
