chore(branchlint): add renovate

--- a/.branchlintrc
+++ b/.branchlintrc
@@ -1,15 +1,28 @@
 {
   "branchNameLinter": {
-    "prefixes": ["feature", "hotfix", "release"],
+    "prefixes": [
+      "feature",
+      "hotfix",
+      "release",
+      "renovate"
+    ],
     "suggestions": {
       "features": "feature",
       "feat": "feature",
       "fix": "hotfix",
       "releases": "release"
     },
-    "banned": ["wip"],
-    "skip": ["skip-ci"],
-    "disallowed": ["master", "develop", "staging"],
+    "banned": [
+      "wip"
+    ],
+    "skip": [
+      "skip-ci"
+    ],
+    "disallowed": [
+      "master",
+      "develop",
+      "staging"
+    ],
     "seperator": "/",
     "msgBranchBanned": "Branches with the name \"%s\" are not allowed.",
     "msgBranchDisallowed": "Pushing to \"%s\" is not allowed, use git-flow.",
