--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   "main": "lib/module.js",
   "scripts": {
     "dev": "nuxt example",
-    "generate": "nuxt generate --config-file example/nuxt.config.js",
+    "generate": "nuxt generate --config-file example/nuxt.config.js --target static",
     "build": "nuxt build --config-file example/nuxt.config.js",
-    "start": "nuxt start --config-file example/nuxt.config.js",
+    "start": "nuxt start --config-file example/nuxt.config.js --target static",
     "lint": "yarn lint:js && yarn lint:css",
     "lint:js": "eslint --ext .js,.vue example lib test",
     "lint:css": "stylelint \"example/**/*.vue\" \"example/**/*.css\", \"lib/**/*.vue\" \"lib/**/*.css\"",
