--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Master
+name: Main
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   install:
@@ -21,13 +21,16 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: Checkout Repo
         uses: actions/checkout@v2
-      - name: cache node_modules
+      - name: cache node_modules (Example)
         uses: actions/cache@v2
         id: cache
         with:
-          path: node_modules
+          path: |
+            node_modules
+            ~/.cache/ms-playwright/
+            ~\AppData\Local\ms-playwright\
           key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles(format('{0}{1}', github.workspace, '/package-lock.json')) }}
-      - name: Install Dependencies
+      - name: Install Dependencies (Example)
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Test
@@ -51,14 +54,16 @@ jobs:
         uses: actions/checkout@v2
       - name: Versioning
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npx -p semantic-release -p @semantic-release/git -p @semantic-release/changelog -p @semantic-release/exec -p semantic-release-ado semantic-release --provider=github
+          rm -rf ./publish && rsync -r --exclude publish ./* ./publish
+          npx -p semantic-release -p @semantic-release/git -p @semantic-release/changelog -p @semantic-release/exec -p semantic-release-github semantic-release --provider=github --debug=true
 
-  build-gh-pages:
-    name: Build (GH-Pages)
-    needs: install
+  build-example:
+    name: Build (Example)
+    needs: semantic-version
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -76,40 +81,43 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: node_modules
+          path: |
+            node_modules
+            ~/.cache/ms-playwright/
+            ~\AppData\Local\ms-playwright\
           key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles(format('{0}{1}', github.workspace, '/package-lock.json')) }}
       - name: Build
         run: |
-          npm run generate
+          npm run generate --build-analyze
           mkdir dist/reports dist/reports/webpack
-          cp -R reports/webpack/* dist/reports/webpack/
+          cp -R .reports/webpack/* dist/reports/webpack
           touch dist/.nojekyll
         env:
-          WEBSITE_HOST: 'https://grabarzundpartner.github.io/nuxt-font-loader-strategy'
+          WEBSITE_HOST: "https://grabarzundpartner.github.io/nuxt-font-loader-strategy"
           BASE_PATH: /nuxt-font-loader-strategy/
           DIST_PATH: dist
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
-          name: ghpages
+          name: exampleArtifact
           path: dist
 
   deploy-ghpages:
     name: Deploy (GH-Pages)
-    needs: build-gh-pages
+    needs: [build-example]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest]
         node: [12]
     steps:
-      - name: Download Artifact
+      - name: Download Artifact (Example)
         uses: actions/download-artifact@master
         with:
-          name: ghpages
-          path: ghpages
+          name: exampleArtifact
+          path: public
       - name: Deploy to GH-Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ghpages
+          publish_dir: public
