--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,8 @@
 name: Test
 on:
-  push:
-    branches:
-      - 'feature/**'
-      - 'hotfix/**'
-      - 'renovate/**'
+  pull_request:
+    types: [opened, synchronize, reopened]
+
 jobs:
   build:
     name: Test & Build
@@ -27,7 +25,10 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: node_modules
+          path: |
+            node_modules
+            ~/.cache/ms-playwright/
+            ~\AppData\Local\ms-playwright\
           key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles(format('{0}{1}', github.workspace, '/package-lock.json')) }}
 
       - name: Install Dependencies
