--- a/.releaserc
+++ b/.releaserc
@@ -17,10 +17,7 @@
       }
     ],
     [
-      "@semantic-release/npm",
-      {
-        "pkgRoot": "./publish"
-      }
+      "@semantic-release/npm"
     ],
     [
       "@semantic-release/git",
