--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,22 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Debug (generate)",
+      "runtimeVersion": "12.1.0",
+      "runtimeArgs": [
+        "--inspect"
+      ],
+      "program": "${workspaceFolder}/node_modules/.bin/nuxt",
+      "outputCapture": "std",
+      "args": [
+        "generate",
+        "--config-file",
+        "example/nuxt.config.js"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Debug (build)",
       "runtimeVersion": "12.1.0",
       "runtimeArgs": [
